logs/offboard_pkg/build.make.275.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In constructor ‘MultiBody::MultiBody()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:43:9: error: ‘Init_length_angle’ was not declared in this scope; did you mean ‘Init_length_angle_circle’?
   43 |         Init_length_angle(length_angle_list);
      |         ^~~~~~~~~~~~~~~~~
      |         Init_length_angle_circle
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: At global scope:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:262:6: error: no declaration matches ‘void MultiBody::Init_length_angle(XmlRpc::XmlRpcValue&)’
  262 | void MultiBody::Init_length_angle(XmlRpc::XmlRpcValue &length_angle_list)
      |      ^~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:262:6: note: no functions named ‘void MultiBody::Init_length_angle(XmlRpc::XmlRpcValue&)’
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:5:7: note: ‘class MultiBody’ defined here
    5 | class MultiBody
      |       ^~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:195:6: error: no declaration matches ‘bool TaskManager::is_GPS_circle_succuss(Eigen::Vector3d&)’
  195 | bool TaskManager::is_GPS_circle_succuss(Eigen::Vector3d &pos)
      |      ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:195:6: note: no functions named ‘bool TaskManager::is_GPS_circle_succuss(Eigen::Vector3d&)’
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:15:7: note: ‘class TaskManager’ defined here
   15 | class TaskManager
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
